@@ -175,7 +175,6 @@ StartCommand() {
         --add-opens=java.base/java.nio=ALL-UNNAMED \
         --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
         --add-opens=java.base/sun.security.ssl=ALL-UNNAMED  \
-        --add-opens=java.base/sun.security.util=ALL-UNNAMED  \
         -Djava.library.path="$VESPA_HOME/lib64" \
         -Djava.awt.headless=true \
         -Dsun.rmi.dgc.client.gcInterval=3600000 \
